# erp-module-configurator

./: README.md  pyproject.toml
src/module_configurator/: crew.py  main.py
src/module_configurator/config/: agents.yaml  tasks.yaml
